# IS421-Scrapers-

./: .env.example  .gitignore  Dockerfile.hackernews  Dockerfile.techcrunch  Makefile  README.md  audit_output.py  bundle_project.py  docker-compose.yml  inspect_data.py  run_ingestion.sh  run_verification.sh  verify_determinism.py
.github/workflows/: python-app.yml
ai_hackernews_ingest/: pyproject.toml
ai_hackernews_ingest/src/ai_hackernews_ingest/: __init__.py  cli.py  client.py  filter.py  scraper.py
ai_intel_processing/: pyproject.toml
ai_intel_processing/src/ai_intel_processing/: __init__.py  database.py  deduplication.py  llm.py  processing.py  prompts.py  schema.py  utils.py
ai_techcrunch_ingest/: pyproject.toml
ai_techcrunch_ingest/src/ai_techcrunch_ingest/: __init__.py  cli.py  rss.py  scraper.py
scripts/cron/: entrypoint.sh
tests/: test_critical_bugs.py  test_deduplication.py  test_filtering.py  test_processing.py  test_schema.py
