[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_hackernews_ingest"
version = "0.1.0"
description = "Hacker News ingestion module for AI news system"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
    "click>=8.1",
    "ai_intel_processing",
]

[project.scripts]
ai-hn = "ai_hackernews_ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
