[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_techcrunch_ingest"
version = "0.1.0"
description = "TechCrunch ingestion module for AI news system"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "feedparser>=6.0",
    "pydantic>=2.0",
    "click>=8.1",
    "ai_intel_processing", # Local dependency will need to be installed in editable mode or similar
]

[project.scripts]
ai-techcrunch = "ai_techcrunch_ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
